# default_cube

./: Cargo.toml
src/: camera.rs  main.rs
