[package]
name = "default_cube"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.9.1", features = ["dynamic"] }
bevy_mod_picking = "0.11.0"
bevy-inspector-egui = "0.17.0"
#bevy_transform_gizmo = { path = "../../../extern/my_bevy_transform_gizmo/" }
bevy_transform_gizmo = { git = "https://github.com/woodroww/my_bevy_transform_gizmo" }
